# compiler

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  TODOS.md  UPGRADE_PLAN.md  agents.md  arkade_kitties.json  contracts.js  controlled_mint.json  fuji_safe.json  main.js  nft_mint.json  non_interactive_swap.json  price_beacon.json  single_sig.json  test_complex.json  test_leftonly.json  test_simple.json  threshold_oracle.json
arkade-bindgen/: Cargo.toml
arkade-bindgen/src/: artifact.rs  ir.rs  lib.rs  main.rs  naming.rs
arkade-bindgen/src/targets/: go.rs  mod.rs  typescript.rs
arkade-bindgen/tests/: go_test.rs  ir_test.rs  typescript_test.rs
arkade-bindgen/tests/fixtures/: htlc.json  htlc_legacy.json  single_sig.json
docs/: ArkadeKitties.md  arkade-primitives-spec.md  bonds.md  capped-synth.md  interpreter.md  lending-pool-prd.md  mm-residual-hedge.md  opcodes.md  options.md  recurrent-exit-pulse.md  stability-contracts-spec.md  stability-pool-prd.md  stability-vault-prd.md  stability.md  synthetic-susd.md
examples/: arkade_kitties.ark  arkade_kitties.hack  arkade_kitties.json  bare.ark  bare.hack  bare.json  cash_secured_put.ark  cash_secured_put.json  compile_all.rs  composite_router.ark  controlled_mint.ark  covered_call.json  credit_note.ark  extra_opcodes.json  extra_opcodes.tap  fee_adapter.ark  fuji_safe.ark  fuji_safe.json  fuji_safe.tap  htlc.ark  htlc.hack  htlc.json  htlc.tap  interpreter_demo.rs  lending_market.ark  nft_mint.ark  nft_mint.json  non_interactive_swap.ark  non_interactive_swap.hack  non_interactive_swap.json  payment_auth.json  (+21 more)
(+161 files in other folders)
